Added payment-microservice and fixed tests, most stable version