@@ -1,25 +1,24 @@
 package com.metao.book.product.presentation;
 
 import com.metao.book.product.application.service.kafkaProductProducer;
-import com.metao.book.product.application.service.kafkaProductProducer;
 import com.metao.book.product.domain.dto.ProductDTO;
 import com.metao.book.product.domain.exception.ProductNotFoundException;
 import com.metao.book.product.domain.mapper.ProductMapper;
 import com.metao.book.product.domain.service.ProductService;
-import java.util.Arrays; // Added import
-import java.util.Collections; // Added import
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors; // Added import
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
+import org.springframework.util.StringUtils;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam; // Already present, but good to confirm
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -54,16 +53,15 @@ public class ProductController {
         @RequestParam(value = "offset", defaultValue = "0") int offset,
         @RequestParam(value = "limit", defaultValue = "10") int limit
     ) {
-        List<String> categoryList;
-        if (categoriesCsv == null || categoriesCsv.trim().isEmpty()) {
-            categoryList = java.util.Collections.emptyList();
-        } else {
-            categoryList = java.util.Arrays.stream(categoriesCsv.split(","))
+        var categoryList = Arrays.stream(categoriesCsv.split(","))
                                      .map(String::trim)
-                                     .filter(s -> !s.isEmpty())
-                                     .collect(java.util.stream.Collectors.toList());
-        }
-        return productService.getProductsByCategories(limit, offset, categoryList);
+            .filter(StringUtils::hasText)
+            .toList();
+
+        return productService.getProductsByCategories(limit, offset, categoryList)
+            .stream()
+            .map(ProductMapper::toDto)
+            .collect(Collectors.toList());
     }
 
     @GetMapping("/search")
